# loco-generate-via-sql-rust-crate

./: Cargo.toml  README.md  generate-full-stack-with-loco-tera-htmx-alpine-setup.py
docs/: cli.md  dialects.md  foreign-keys.md  library.md  troubleshooting.md  tutorial.md  types.md
docs/superpowers/plans/: 2026-05-04-sql-to-loco-scaffold.md
docs/superpowers/specs/: 2026-05-04-sql-to-loco-scaffold-design.md
examples/: README.md  blog-postgres.expected  blog-postgres.sql  fk-rules.expected  fk-rules.sql  notes-sqlite.expected  notes-sqlite.sql  shop-mysql.expected  shop-mysql.sql  verify.sh
src/: emit.rs  ir.rs  lib.rs  main.rs  parse.rs  types.rs
tests/: snapshot.rs
